# src/server/index.js
@@ -1,83 +1,93 @@
-const express = require('express');
+const express = require("express");
 const app = express();
-const cors = require('cors');
-const pool = require('./db');
+const cors = require("cors");
+const pool = require("./db");
 
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('./swagger.json');
+const swaggerUi = require("swagger-ui-express");
+const swaggerDocument = require("./swagger.json");
 
 // adding middleware
 app.use(cors());
 app.use(express.json());
 
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // routes
 // create todo
 
-app.post('/todos', async (req, res) => {
-    try {
-        const { description } = req.body;
-        const newTodo = await pool.query('INSERT INTO todo (description) VALUES ($1) RETURNING *', [description]);
+app.post("/todos", async (req, res) => {
+  try {
+    const { description } = req.body;
+    const newTodo = await pool.query(
+      "INSERT INTO todo (description) VALUES ($1) RETURNING *",
+      [description]
+    );
 
-        res.json(newTodo.rows[0]);
-    } catch (error) {
-        console.error(error.message)
-    }
+    res.json(newTodo.rows[0]);
+  } catch (error) {
+    console.error(error.message);
+  }
 });
 
 // get all todos
 
-app.get('/todos', async (req, res) => {
-    try {
-        const allTodos = await pool.query('SELECT * FROM todo');
+app.get("/todos", async (req, res) => {
+  try {
+    const allTodos = await pool.query("SELECT * FROM todo");
 
-        res.json(allTodos.rows);
-    } catch (error) {
-        console.error(error.message)
-    }
+    res.json(allTodos.rows);
+  } catch (error) {
+    console.error(error.message);
+  }
 });
 
 // get todo
 
-app.get('/todos/:id', async (req, res) => {
-    try {
-        const { id } = req.params;
-        const todo = await pool.query('SELECT * FROM todo WHERE todo_id = $1', [id]);
+app.get("/todos/:id", async (req, res) => {
+  try {
+    const { id } = req.params;
+    const todo = await pool.query("SELECT * FROM todo WHERE todo_id = $1", [
+      id
+    ]);
 
-        res.json(todo.rows[0]);
-    } catch (error) {
-        console.error(error.message)
-    }
+    res.json(todo.rows[0]);
+  } catch (error) {
+    console.error(error.message);
+  }
 });
 
 // update todo
 
-app.put('/todos/:id', async (req, res) => {
-    try {
-        const { id } = req.params;
-        const { description } = req.body;
-        const updateTodo = await pool.query('UPDATE todo SET description = $1 WHERE todo_id = $2', [description, id]);
+app.put("/todos/:id", async (req, res) => {
+  try {
+    const { id } = req.params;
+    const { description } = req.body;
+    const updateTodo = await pool.query(
+      "UPDATE todo SET description = $1 WHERE todo_id = $2",
+      [description, id]
+    );
 
-        res.json('Todo was updated!');
-    } catch (error) {
-        console.error(error.message)
-    }
+    res.json("Todo was updated!");
+  } catch (error) {
+    console.error(error.message);
+  }
 });
 
 // delete todo
 
-app.delete('/todos/:id', async (req, res) => {
-    try {
-        const { id } = req.params;
-        const deleteTodo = await pool.query('DELETE FROM todo WHERE todo_id = $1', [id]);
+app.delete("/todos/:id", async (req, res) => {
+  try {
+    const { id } = req.params;
+    const deleteTodo = await pool.query("DELETE FROM todo WHERE todo_id = $1", [
+      id
+    ]);
 
-        res.json('Todo was deleted');
-    } catch (error) {
-        console.error(error.message);
-    }
+    res.json("Todo was deleted");
+  } catch (error) {
+    console.error(error.message);
+  }
 });
 
 app.listen(5000, () => {
-    console.log("server has started on port 5000");
+  console.log("server has started on port 5000");
 });
